# Bubblegum_NIFs

./: .gitignore  README.md  mix.exs
lib/: bubblegum_elixir.ex
lib/bubblegum_elixir/: bubblegum.ex
lib/mpl_bubblegum/: client.ex  connection.ex  mpl_bubblegum.ex  types.ex
native/bubblegumelixir_bubblegum_nif/: Cargo.toml  README.md
native/bubblegumelixir_bubblegum_nif/src/: lib.rs
native/mpl_bubblegum_nif/: Cargo.toml  README.md
native/mpl_bubblegum_nif/src/: lib.rs
test/: bubblegum_elixir_test.exs  mpl_bubblegum_test.exs
