[package]
name = "bubblegumelixir_bubblegum_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bubblegumelixir_bubblegum_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.29.0", default-features = false, features = ["derive", "nif_version_2_14"] }
mpl-bubblegum = "1.0.0"  # Use the latest version
solana-program = "1.16.0"  # Match version with mpl-bubblegum requirements